# lunchversity-gql

./: .env.local  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml
migrations/2021-05-15-233911_initial_setup/: down.sql  up.sql
src/: gql.rs  main.rs  models.rs  queries.rs  schema.rs
