[package]
name = "lunchversity-gql"
version = "0.1.0"
authors = ["Artem Golovin <artgolovin96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
juniper = "0.15.5"
actix-cors = "0.5.4"
env_logger = "0.8"
serde = "1.0.103"
serde_json = "1.0.44"
serde_derive = "1.0.103"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
